--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.2.4",
     "next": "14.2.3",
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
