--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "framer-motion": "^11.2.4",
     "next": "14.2.3",
     "next-mdx-remote": "^4.4.1",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "rehype-pretty-code": "^0.13.2",
