--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "framer-motion": "^11.2.4",
+    "mongodb": "^6.6.2",
     "next": "14.2.3",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.3.0",
