--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18",
     "react-dom": "^18",
     "rehype-pretty-code": "^0.13.2",
-    "shiki": "^1.6.0"
+    "shiki": "^1.6.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
