--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@heroicons/react": "^2.1.3",
     "framer-motion": "^11.2.4",
     "mongodb": "^6.6.2",
+    "negotiator": "^0.6.3",
     "next": "14.2.3",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.3.0",
