--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.1.0",
     "@formatjs/intl-localematcher": "^0.5.4",
     "@heroicons/react": "^2.1.3",
     "framer-motion": "^11.2.4",
     "mongodb": "^6.6.2",
     "negotiator": "^0.6.3",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "rehype-pretty-code": "^0.13.2",
