--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/mongodb-adapter": "^3.1.0",
     "@formatjs/intl-localematcher": "^0.5.4",
     "@heroicons/react": "^2.1.3",
+    "@react-email/components": "^0.0.19",
     "framer-motion": "^11.2.4",
     "mongodb": "^6.6.2",
     "negotiator": "^0.6.3",
@@ -23,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "rehype-pretty-code": "^0.13.2",
+    "resend": "^3.2.0",
     "shiki": "^1.6.0",
     "zod": "^3.23.8"
   },
