--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.1.0",
+    "@clerk/nextjs": "^5.1.2",
     "@formatjs/intl-localematcher": "^0.5.4",
     "@heroicons/react": "^2.1.3",
     "framer-motion": "^11.2.4",
